ignore terraform files

--- a/.gitignore
+++ b/.gitignore
@@ -175,7 +175,26 @@ cython_debug/
 
 data/
 *.geojson
-*.tfstate
-*.tfstate.backup
-*.tfstate.backup.*
-*.terraform.lock.hcl
+# Local .terraform directories
+
+**/.terraform/*
+
+# Ignore variables files
+
+*.auto.tfvars
+
+# Ignore override files
+
+*.tfoverride
+
+# Ignore environment-specific files
+
+.envrc
+
+
+
+# Ignore CLI configuration files
+
+.terraformrc
+
+terraform.rc
