--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,28 @@
-name: CI
+name: CI Pipeline
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Check out repository
+        uses: actions/checkout@v3
 
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.11'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Install dependencies
+      - name: Install Docker Compose
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
 
-      # Optional: If your tests need LocalStack, you can start it via Docker Compose
-      - name: Start LocalStack
-        run: docker-compose up -d localstack
+      - name: Build and run Docker Compose
+        run: docker-compose up -d
 
       - name: Run tests
-        run: pytest --maxfail=1 --disable-warnings -q
+        run: pytest tests/
 
-      # Optional: Stop LocalStack after tests complete
-      - name: Stop LocalStack
-        if: always()
-        run: docker-compose down
