--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,37 +2,31 @@ name: CI Pipeline
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Install Docker Compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
-
-      - name: Build and run Docker Compose
-        run: docker-compose up -d
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.11
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r src/requirements.txt
-          pip install pytest 
+          pip install -r requirements.txt
+          pip install pytest pytest-cov
 
-      - name: Set up Python environment
-        run: |
-          export PYTHONPATH="${PYTHONPATH}:./src"
-        
-      - name: Run tests
-        run: pytest tests/
+      - name: Run tests with pytest
+        env:
+          PYTHONPATH: ./src  
+        run: pytest --maxfail=5 --disable-warnings --cov=src tests/
+
 
