--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,6 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
-      - name: List files
-        run: ls -R  
       
       - name: Install Docker Compose
         run: |
@@ -30,12 +27,20 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r src/requirements.txt
-          pip install pytest 
+          pip install pytest
+          pip install pytest-cov 
 
       - name: Set up Python environment
         run: |
           export PYTHONPATH="${PYTHONPATH}:./src"
+      
+      - name: List files
+        run: ls -R  
         
-      - name: Run tests
-        run: pytest tests/
+      - name: Debug Python Path
+        run: echo $PYTHONPATH
+      - name: Run tests with pytest
+        env:
+            PYTHONPATH: ./src  
+        run: pytest tests/ --maxfail=5 --disable-warnings --cov=src
 
