--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r src/requirements.txt
-          pip install pytest
-          pip install pytest-cov 
 
       - name: Set up Python environment
         run: |
@@ -43,4 +41,13 @@ jobs:
         env:
             PYTHONPATH: ./src  
         run: pytest tests/ --maxfail=5 --disable-warnings --cov=src
+        
+      - name: Run Flake8 (PEP8 linter)
+        run: flake8 src tests --max-line-length=88 --exclude=venv,.git,__pycache__
+
+      - name: Run Black (autoformatter check)
+        run: black --check src tests
+
+      - name: Run isort (import sorting check)
+        run: isort --check src tests
 
